src/assets/css/index.css
/************************************************
*
*   Main Stylesheet
*   @version (1.0)
*   @date (2023)
*
*   1.) GENERAL ______________________ @general
*   2.) HEADER _______________________ @header
*   3.) CONTENT ______________________ @content
*   4.) ABOUT ME _____________________ @aboutMe
*   5.) WORK _________________________ @work
*   6.) CONTACT ME ___________________ @contactMe
*   7.) RESUME _______________________ @resume
*   4.) FOOTER _______________________ @footer
*
************************************************/
  
/************************************************
   GENERAL                              @general

   The base styles for the page, text
   and links. Includes utility class styles
************************************************/
:root {
    --bg-color-one: #704488;
    --bg-color-two: #9297C3;
    --bg-color-three: #b7e3cc;
    --bg-color-four: #c4ffb2;
    --bg-color-five: #d6f7a3;
    --bg-color-six: #FFA69E;
}
* {
    box-sizing: border-box;
    padding: 0;
    margin: 0;
}
html,
body {
    height: 100%;
    width: 100%;
    margin: 0;
    display: flex;
    flex-direction: column;
}
a {
    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
    font-size: 14px;
    color: #000;
    text-decoration: none;
}
p {
    font-size: 16px;
}
.float-left {
    float: left;
    margin-right: 25px;
}
.float-right {
    float: right;
    margin-left: 25px;
}
.back-drop {
    opacity: 0;
    background-color: transparent;
    height: 100%;
    width: 100%;
    position: absolute;
}
.back-drop.closed {
    opacity: 0;  
    -webkit-animation: fadeOut 0.5s ease-out 0s 0.7 normal backwards;  
    -moz-animation: fadeOut 0.5s ease-out 0s 0.7 normal backwards;
    animation: fadeOut 0.5s ease-out 0s 0.7 normal backwards;
}
.back-drop.active {
    opacity: 0.7;
    background-color: #191919;
    -webkit-animation: fadeIn 0.25s ease-in 0s 0.7 normal forwards;  
    -moz-animation: fadeIn 0.25s ease-in 0s 0.7 normal forwards;
    animation: fadeIn 0.25s ease-in 0s 0.7 normal forwards;
    z-index: 9999;
}

/************************************************
   HEADER                                @header

   The styles for the header which
   includes a title, an image and a 
   horizontal menu (desktop and mobile)
************************************************/
.header {
    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
    background-color: var(--bg-color-three);
    color: #ffffff;
    width: 100%;
    height: 3em;
    position: fixed;
    top: 0;
    z-index: 999999;
}
.header-title {
    font-family: Verdana, sans-serif;
    font-weight: normal;
    display: inline-block;
    font-size: 29px;
    color: #000;
    position: absolute;
    left: auto;
    right: auto;
    margin: 0 auto;
    top: 3.25em;
}
@media (min-width: 500px) {
    .header-title {
        font-size: 48px;
        top: 3.25em;
    }
}
@media (min-width: 1000px) {
    .header-title {
        font-size: 60px;
        top: 2em;
    }
}
.header nav.desktop-menu {
    display: none;
}
.header nav.mobile-menu {
    display: block;
    margin-right: 20px;
    position: relative;
    height: 100%;
    width: 100%;
    font-size: 20px;
    padding: 0.5em;
    background-color: var(--bg-color-one);
    border-bottom: 1px solid #FFF;
}
.header nav.mobile-menu ul {
    list-style-type: none;
    position: absolute;
    right: 0;
    top: 2.4em;
    background-color: #f9f9f9;
    width: 100%;
    height: 0px;
    text-align: center;
    z-index: 1;
    height: 0px;
}
.header nav.mobile-menu ul.active {
    height: 11em;
    transition: height .3s ease;
}
.header nav.mobile-menu ul.inactive {
    height: 0px;
    transition: height .3s ease;
    overflow: hidden;
}
.header nav.mobile-menu ul li {
    display: block;
    margin-left: 25px;
    padding: 0.25em;
}
.header nav ul li a {
    display: inline-block;
    text-decoration: none;
    color: #FFF;
    font-size: 18px;
    letter-spacing: 2px;
    text-transform: uppercase;
    position: relative;
    padding: 0.5em;
    cursor: pointer;
}
.header nav.mobile-menu ul li a {
    color: transparent;
    background-color: transparent;
    transition: color 3s ease, background-color 3s ease;
}
.header nav ul li a.active {
    color: var(--bg-color-four);
}
.header nav ul li a.active::after {
    position: absolute;
    height: 2px;
    background-color: var(--bg-color-four);
    width: 100%;
    left: 50%;
    bottom: 0;
}
.header nav.mobile-menu ul.active li a {
    color: #191919;
}
.header nav.mobile-menu ul.inactive li a {
    color: transparent;
}
.menu-bar {
    width: 35px;
    height: 5px;
    background-color: var(--bg-color-five);
    margin: 6px 0;
    transition: all 0.5s;
    transform-origin: right;
}
#menu-btn {
    position: absolute;
    right: 1em;
    top: 0px;
    height: 3em;
    width: 3em;
}
#menu-btn .bar-one {
    position: absolute;
    right: 0.5em;
    top: 0;
}
#menu-btn .bar-two {
    position: absolute;
    right: 0.5em;
    top: 0.75em;
    visibility: visible;
    opacity: 1;
    transition: visibility 0s, opacity 0.5s linear;
}
#menu-btn .bar-three {
    position: absolute;
    right: 0.5em;
    top: 1.5em;
}
#menu-btn.active .bar-one {
    transform: rotate(-45deg);
}
#menu-btn.active .bar-two {
    visibility: hidden;
    opacity: 0;
    transition: visibility 0s, opacity 0.5s linear;
}
#menu-btn.active .bar-three {
    transform: rotate(45deg);
    top: 1.7em;
}
@media (min-width: 600px) {
    .header nav.desktop-menu {
        display: block;
    }
    .header nav.mobile-menu {
        display: none;
    }
    .header nav.desktop-menu {
        height: 100%;
        margin-right: 20px;
        width: 100%;
        font-size: 20px;
        background-color: var(--bg-color-one);
        border-bottom: 1px solid #FFF;
    }
    .header nav.desktop-menu ul li {
        display: inline-block;
        margin-left: 25px;
    }
    .header nav.mobile-menu ul li {
        display: none;
    }
    #menu-btn {
        display: none;
    }
}
/************************************************
   The following animation was 
   borrowed from: 
   https://codepen.io/sharkcoder/pen/oNLoddx 
   (@sharkcoder) 
*************************************************/
.header nav ul li a::after {
    content: "";
    position: absolute;
    height: 2px;
    background-color: var(--bg-color-four);
    width: 0;
    left: 50%;
    bottom: 0;
    transform: translateX(-50%);
    transition: 0.5s cubic-bezier(0.68, -0.55, 0.265, 1.55) all;
}
.header nav ul li a:hover {
    color: var(--bg-color-four);
}
.header nav ul li a:hover::after {
    width: 100%;
}
/*************************
    end animation css 
*************************/
.hero {    
    padding: 1em;
    height:100vh;
    width:100vw;
    background: url('../images/vecteezy_rabbit-in-the-beautiful-forest_10856435_332.png'), var(--bg-color-two);
    background-size: 75%;
    background-position: right 3em center;
    background-repeat: no-repeat;
}
.hero .emphasis {
    padding: 30px 0 8px;
    position: relative;
}
.hero .emphasis::before {
    content: "";
    position: absolute;
    left: 2%;
    bottom: 9px;
    width: 5.15em;
    height: 5px;
    background: var(--bg-color-one);
    z-index: 2;
}
@media (min-width: 600px) {
    .hero {    
        background-size: 50%;
    }
}
@media (min-width: 1100px) {
    .hero {    
        background-size: 35%;
    }
}

/************************************************
   CONTENT                               @content

   The styles for the content section
************************************************/
.content {
    flex-grow: 1;
    overflow-y: auto;
    overflow-x: hidden;
    margin-top: 3em;
}
.content-section {
    min-height: 100vh;
    width: 100%;
    display: flex;
}

.content-section .tag {
    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
    display: inline-block;
    padding: 0.2em 0.5em 0.3em;
    border-radius: 5px;
    color: #191919;
    font-weight: 600;
    margin: 0.5em 0.1em;
    background-color: #85cb6f;
}
.content-section .tag-sm {
    font-size: .7em;
    display: inline-block;
    letter-spacing: .15ch;
    font-weight: 400
}

.content-section .content-title {
    width: 100%;
    padding: 1em 0.25em 0.25em 0.25em;
    display: block;
}
.content-section .main-content {
    flex: 1;
    padding: 1em;
    width: 100%;
}
.content-section h2 {
    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
    font-weight: normal;
    padding-bottom: 1em;
}
.content-section h2:before {
    content: "{";
    font-size: 42px;
    padding-right: 0.5em;
}
.content-section h2:after {
    content: "}";
    font-size: 42px;
    padding-left: 0.5em;
}
.content-section.one {
    background-color: var(--bg-color-three);
}
.content-section.two {
    background-color: var(--bg-color-four);
}
.content-section.three {
    background-color: var(--bg-color-five);
}
.content-section.four {
    background-color: var(--bg-color-six);
}

/************************************************
   ABOUT ME                              @aboutMe

   The styles for the about me section
************************************************/

/************************************************
   WORK                                     @work

   The styles for the work section
************************************************/
.card-list { 
    display: grid;
    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
    grid-gap: 20px;
}
.card-list article {
    border: 5px solid #a7e794;
    background-color: #a8e794;
}
.card-list article a {
    position: relative;
}
.card-list article img {
    max-width: 100%;
}
.card-list article:nth-child(1) {
    grid-column: span 2;
}
.content-txt {
    padding: 0.5em;
}
.content-txt,
.content-txt h3 {
    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
    font-weight: normal;
}
.content-txt p,
.content-txt h3 {
    padding-bottom: 0.5em;
}
.content-txt .card-btn {
    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
    display: inline-block;
    padding: 0.5em;
    border-radius: 5px;
    color: lightgray;
    font-weight: normal;
    font-size: 16px;
    margin: 0.5em 0.1em;
    background-color: #191919;
    border: none;
    cursor: pointer;
}
/************************************************
   CONTACT ME                          @contactMe

   The styles for the contact me section
************************************************/

/************************************************
   RESUME                                 @resume

   The styles for the resume section
************************************************/

/************************************************
   FOOTER                                 @footer

   The styles for the footer
************************************************/
.footer {
    text-align: center;
    height: 3em;
    width: 100%;
    background-color: var(--bg-color-one);
    display: table;
    padding: 0.5em;
}
.footer h4 {
    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
    font-size: 18px;
    font-weight: normal;
    color: #FFF;
}
.footer a {
    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
    font-size: 14px;
    font-weight: normal;
    color: #FFF;
}
.footer div.vertical-center {
    display:table-cell;
    vertical-align:middle;
}

